[package]
name = "lib_rcsv"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.101"
csv = "1.0" # Add the csv crate
arrow = "57.0.0"
arrow-ipc = {version = "57.0.0", features = ["zstd"]} 
arrow-schema = "57.0.0"
parquet = "57.0.0"
